syntax = "proto3";

package dfsService;

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}

service Greeter {
  rpc SayHello (GreetingRequest) returns (GreetingResponse);
}
